force-app/main/default/objects/ffct__MigrationSet__c/ffct__MigrationSet__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffct__migrationsetonlinehelp</customHelpPage>
    <description>This object defines the metadata and records that will be processed by a Migration Set Job.</description>
    <label>Migration Set</label>
    <nameField>
        <label>Migration Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migration Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>