force-app/main/default/objects/ffct__MigrationSet__c/fields/ffct__FilterByNamespace__c.field-meta.xml
<CustomField>
    <fullName>ffct__FilterByNamespace__c</fullName>
    <label>Filter By Namespace</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>c2g</fullName>
            </value>
            <value>
                <fullName>ob1</fullName>
            </value>
            <value>
                <fullName>ffbf</fullName>
            </value>
            <value>
                <fullName>SCMC</fullName>
            </value>
            <value>
                <fullName>ffr</fullName>
            </value>
            <value>
                <fullName>pse</fullName>
            </value>
            <value>
                <fullName>ffap</fullName>
            </value>
            <value>
                <fullName>ffgl</fullName>
            </value>
            <value>
                <fullName>ffbilling</fullName>
            </value>
            <value>
                <fullName>ffpsai</fullName>
            </value>
            <value>
                <fullName>VanaHCM</fullName>
            </value>
            <value>
                <fullName>ffqs</fullName>
            </value>
            <value>
                <fullName>ffirule</fullName>
            </value>
            <value>
                <fullName>appirio_core</fullName>
            </value>
            <value>
                <fullName>ffct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>