force-app/main/default/objects/ffct__MigrationSet__c/fields/ffct__FilterOnUsers__c.field-meta.xml
<CustomField>
    <fullName>ffct__FilterOnUsers__c</fullName>
    <description>Holds the list of UserIds whose changes will be captured.</description>
    <label>Filter On Users</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>