force-app/main/default/objects/ffct__MigrationSet__c/listViews/ffct__All.listView-meta.xml
<ListView>
    <fullName>ffct__All</fullName>
    <columns>NAME</columns>
    <columns>ffct__StartDate__c</columns>
    <columns>ffct__EndDate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>